tiny inconsistency patches